--- a/style.css
+++ b/style.css
@@ -698,7 +698,7 @@ span {
 
 /* Animation Reload and Scroll */
 
-/* .animate {
+.animate {
     position: absolute;
     top:0;
     right: 0;
@@ -710,7 +710,7 @@ span {
 
 .animate.home-img {
     width: 50%;
-} */
+}
 
 .logo .animate,
 .navbar .animate,
@@ -823,15 +823,15 @@ section:nth-child(odd) .animate.scroll,
             display: block;
             font-size: 2rem;
             margin: 3rem 0;
-            /* transform: translateX(-20rem);
+            transform: translateX(-20rem);
             transition: .25s ease;
-            transition-delay: 0s;  */
+            transition-delay: 0s;  
         }
  
-        /* .navbar.active a {
+        .navbar.active a {
             transform: translateX(0);
             transition-delay: .25s;
-        }   */
+        }  
 
         .home-imgHover {
             pointer-events: none;
@@ -905,7 +905,7 @@ section:nth-child(odd) .animate.scroll,
 
 /* Keyframe animation */
 
-/* @keyframes homeBgText {
+ @keyframes homeBgText {
     0%,
     10%,
     100% {
@@ -937,7 +937,7 @@ section:nth-child(odd) .animate.scroll,
     81% {
         opacity: 0;
     }
-} */
+}
 
 @keyframes aboutSpinner {
     100% {
